<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25sp">

        <TextView
            android:id="@+id/txvNumero1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txv_numero1" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/txvNumero2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txv_numero2" />

        <EditText
            android:id="@+id/editTextNumberDecimal2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSomar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15sp"
                android:layout_weight="1"
                android:text="@string/btn_somar" />

            <Button
                android:id="@+id/btnSubtrair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_weight="1"
                android:text="@string/btn_subtrair" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMultiplicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15sp"
                android:layout_weight="1"
                android:text="@string/btn_multiplicar" />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_weight="1"
                android:text="@string/btn_dividir" />
        </LinearLayout>

        <TextView
            android:id="@+id/txvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txv_resultado"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>